...
                    android:layout_height="150dp"
                    android:layout_gravity="bottom"
                    android:background="@drawable/transparent" />
            </FrameLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/detail_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:background="@android:color/transparent"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay">

...
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_weight="1" />
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_favorite"
        app:fabSize="normal" />
...
